feat: add payments page

--- a/datacenter-project/#src/components/company/details/_details.html
+++ b/datacenter-project/#src/components/company/details/_details.html
@@ -2,47 +2,7 @@
     <div class="container details__container">
             <div class="details__content">
                 <h1 class="details__title">Наши реквизиты</h1>
-                <div class="details__info">
-                    <p>Общество с ограниченной ответственностью "Датахата"</p>
-                </div>
-                <div class="details__info">
-                    <h4>Учетный номер плательщика (УНП):</h4>
-                    <p>191445401</p>
-                </div>
-                <div class="details__info">
-                    <h4>Банковские реквизиты:</h4>
-                    <p>BY33BLNB30120000079425000933 (BYN),</p>
-                    <p>BY25BLNB30120000079425001840 (USD),</p>
-                    <p>BY45BLNB30120000079425001978 (EUR),</p>
-                    <p>BY69BLNB30120000079425001643 (RUR).</p>
-                    <p> в ОАО "БНБ-Банк", 220012, г. Минск, пр. Независимости, д. 87а</p>
-                    <p> БИК: BLNBBY2X</p>
-                </div>
-                <div class="details__info">
-                    <h4>Наши адреса</h4>
-                    <p>Почтовый адрес:</p>
-                    <p><span>220019, г. Минск, ул. Колхозная 2б</span></p>
-                    <p>Адрес дата-центра:</p>
-                    <p><span>г. Минск, ул. Шаранговича 19</span></p>
-                    <p>Юридический адрес:</p>
-                    <p><span>220013, г. Минск, ул. Я Коласа 37-16</span></p>
-                </div>
-                <div class="details__info">
-                    <h4>Контакты</h4>
-                    <p>Телефоны:</p>
-                    <p><span>+375 29 308 6666, +375 33 308 6666</span></p>
-                    <p>Факс:</p>
-                    <p><span>+375 17 388 66 55</span></p>
-                    <p>e-mail:</p>
-                    <p><span>sales@datahata.by</span></p>
-                </div>
-                <div class="details__info">
-                    <p>Директор - Палышенкова Ирина Валентиновна, действует на основании Устава</p>
-                </div>
-                <div class="details__info">
-                    <p>Регистрационный номер ЦОД в БелГИЭ:</p>
-                    <p><span>DB410D408ID320110627</span></p>
-                </div>
+                @@include('_details-data.html')
             </div>
             <img class="details__img" src="img/main-about/about.png" alt="section image">
     </div>
