--- a/datacenter-project/#src/components/for-clients/_payments.html
+++ b/datacenter-project/#src/components/for-clients/_payments.html
@@ -1,172 +1,91 @@
-<section class="payments-section section-padding">
-    <div class="container">
-        <div class="payments-container">
-            <h1 class="title-section" id="title">Способы оплаты</h1>
-            <div class="payments-container-item">
-                <div class="payments-container-inner">
-                    <div class="payments-container-text">
-                        <p>Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета воспользуйтесь
-                            кнопкой "Пополнить баланс" на главной странице личного кабинета. В разделе "Платежи" можно
-                            распечатать платежное поручение, для этого выберите нужный счет и воспользуйтесь кнопкой
-                            "Печать".</p>
-                        <p>Вы можете пополнить баланс на любую сумму. Абонентская плата за наши услуги списывается
-                            ежедневно равными долями.</p>
-                    </div>
-                    <div class="payments-container-card">
-                        <h2 class="payments-subtitle">Способы оплаты для физических лиц:</h2>
-                        <div class="card-inner">
-                            <h3>Способы оплаты</h3>
-                            <div class="card-image">
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle13.svg" alt="mastercard">
-                                </div>
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle14.svg" alt="mcsecure">
-                                </div>
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle15.svg" alt="visa">
-                                </div>
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle12.svg" alt="visasecure">
-                                </div>
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle17.svg" alt="belcard">
-                                </div>
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle18.svg" id="img3" alt="belarusbank">
-                                </div>
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle19.svg" alt="assist">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-inner">
-                            <h3>Оплата электронными деньгами</h3>
-                            <div class="card-image">
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle20.svg" id="img4" alt="webmoney">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-inner">
-                            <h3>Оплата с использованием системы "Расчет" ЕРИП</h3>
-                            <div class="card-image">
-                                <div class="card-image-inner">
-                                    <img src="img/payments/icons/Rectangle16.svg" id="img5" alt="ерип">
-                                </div>
-
-                            </div>
+<section class="payments">
+    <div class="container payments__container">
+        <div class="layout-2-column">
+            <div class="payments__content">
+                <h1 class="payments__title">Способы оплаты</h1>
+                <p class="payments__text">Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета
+                    воспользуйтесь
+                    кнопкой "Пополнить баланс" на главной странице личного кабинета. В разделе "Платежи" можно
+                    распечатать платежное поручение, для этого выберите нужный счет и воспользуйтесь кнопкой
+                    "Печать".</p>
+                <p class="payments__text">Вы можете пополнить баланс на любую сумму. Абонентская плата за наши услуги
+                    списывается
+                    ежедневно равными долями.</p>
+                <div class="payments__cards">
+                    <p class="payments__subtitle">Способы оплаты для физических лиц:</p>
+                    <div class="card">
+                        <p class="card__title">Способы оплаты</p>
+                        <div class="card__images layout-4-column">
+                            <img src="img/payments/icons/mastercard.svg" alt="mastercard">
+                            <img src="img/payments/icons/mastercard-secure.svg" alt="mcsecure">
+                            <img src="img/payments/icons/visa.svg" alt="visa">
+                            <img src="img/payments/icons/visa-secure.svg" alt="visasecure">
+                            <img src="img/payments/icons/belcard.svg" alt="belcard">
+                            <img src="img/payments/icons/belarusbank.svg" alt="belarusbank">
+                            <img src="img/payments/icons/assist.svg" alt="assist">
                         </div>
                     </div>
-                </div>
-                <div class="payments-container-inner" id="order1">
-                    <div class="payments-container-img">
-                        <img id="img1" src="img/payments/Group132.png" alt="section-img">
-                        <img id="img2" src="img/payments/payment.png" alt="section-img">
-                    </div>
-                </div>
-            </div>
-            <div class="payments-container-item" id="mg-item">
-                <div class="payments-container-inner">
-                    <h4 class="payments-subtitle">Оплата по безналичному расчету</h4>
-                    <div class="payments-container-text">
-                        <p>Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета воспользуйтесь
-                            кнопкой "Пополнить баланс" на главной странице личного кабинета. В разделе "Платежи" можно
-                            распечатать платежное поручение, для этого выберите нужный счет и воспользуйтесь кнопкой
-                            "Печать".</p>
-                        <p>Вы можете пополнить баланс на любую сумму. Абонентская плата за наши услуги списывается
-                            ежедневно равными долями.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="payments-container-item">
-                <div class="payments-container-inner">
-                    <div class="payments-container-img">
-                        <img src="img/main-about/about.png" alt="section-img">
-                    </div>
-                </div>
-                <div class="payments-container-inner">
-                    <div class="payments-container-details">
-                        <h4 class="title-section">Наши реквизиты</h4>
-                        <div class="details-container-inner mg-top">
-                            Общество с ограниченной ответственностью "Датахата"
-                        </div>
-                        <div class="details-container-inner">
-                            <h5 class="details-subtitle">Учетный номер плательщика (УНП):</h5>
-                            <p>191445401</p>
-                        </div>
-                        <div class="details-container-inner">
-                            <h5 class="details-subtitle">Банковские реквизиты:</h5>
-                            <p>BY33BLNB30120000079425000933 (BYN),</p>
-                            <p>BY25BLNB30120000079425001840 (USD),</p>
-                            <p>BY45BLNB30120000079425001978 (EUR),</p>
-                            <p>BY69BLNB30120000079425001643 (RUR).</p>
-                            <p class="mg-top"> в ОАО "БНБ-Банк", 220012, г. Минск, пр. Независимости, д. 87а
-                            <p>
-                            <p> БИК: BLNBBY2X</p>
-                        </div>
-                        <div class="details-container-inner">
-                            <h5 class="details-subtitle">Наши адреса</h5>
-                            <p>Почтовый адрес:</p>
-                            <p class="mg-bot"><span>220019, г. Минск, ул. Колхозная 2б</span></p>
-                            <p>Адрес дата-центра:</p>
-                            <p class="mg-bot"><span>г. Минск, ул. Шаранговича 19</span></p>
-                            <p>Юридический адрес:</p>
-                            <p><span>220013, г. Минск, ул. Я Коласа 37-16</span></p>
-                        </div>
-                        <div class="details-container-inner">
-                            <h5 class="details-subtitle">Контакты</h5>
-                            <p>Телефоны:</p>
-                            <p class="mg-bot"><span>+375 29 308 6666, +375 33 308 6666</span></p>
-                            <p>Факс:</p>
-                            <p class="mg-bot"><span>+375 17 388 66 55</span></p>
-                            <p>e-mail:</p>
-                            <p><span>sales@datahata.by</span></p>
-                        </div>
-                        <div class="details-container-inner">
-                            Директор - Палышенкова Ирина Валентиновна, действует на основании Устава
-                        </div>
-                        <div class="details-container-inner">
-                            <p class="reg-number">Регистрационный номер ЦОД в БелГИЭ:</p>
-                            <p><span>DB410D408ID320110627</span></p>
+                    <div class="card">
+                        <p class="card__title">Оплата с использованием системы "Расчет" ЕРИП</p>
+                        <div class="card-image">
+                            <img src="img/payments/icons/erip.svg" alt="ЕРИП">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="payments-container-item">
-                <div class="payments-container-inner">
-                    <div class="payments-container-method">
-                        <h5 class="payments-subtitle">Условия оплаты банковскими картами</h5>
-                        <div class="payments-container-text">
-                            <ol>
-                                <li>Оплата по пластиковым картам производится совместно с ОАО АСБ "Беларусбанк" и ООО
-                                    "Компания электронных платежей "АССИСТ".</li>
-                                <li>Реквизиты пластиковой карты не вводятся клиентом на нашем сайте. Ввод платежных
-                                    данных осуществляется на сайте платежной системы.</li>
-                                <li>При оплате пластиковой картой клиент переадресовывается на авторизационные страницы
-                                    системы Интернет – платежей для последующего ввода реквизитов карты и осуществления
-                                    аутентификации держателя карты с использованием:
-                                    <ul>
-                                        <li>– механизмов Verified By Visa и (или) MasterCard SecureCode – для карточек
-                                            платежных систем Visa, MasterCard (при необходимости);</li>
-                                        <li>– технологии Интернет Пароль БЕЛКАРТ – для карточек платежной системы
-                                            БЕЛКАРТ, выпущенных ОАО "АСБ Беларусбанк".</li>
-                                    </ul>
-                                </li>
-                                <li>Доступ к авторизационным страницам осуществляется с использованием протокола,
-                                    обеспечивающего безопасную передачу данных в Интернете (SSL).</li>
-                                <li>В случае отказа от использования услуг, при оплате банковской платежной картой,
-                                    деньги возвращаются на карту, с которой совершена оплата.</li>
-                            </ol>
-                        </div>
-                    </div>
-                </div>
-                <div class="payments-container-inner" id="order2">
-                    <div class="payments-container-img">
-                        <img src="img/payments/Money.png" alt="section-img">
-                    </div>
-                </div>
+            <img class="payments__img" src="img/payments/payment.png" alt="section-img">
+        </div>
+        <div class="layout-2-column">
+            <div class="payments__content">
+                <p class="payments__subtitle">Оплата по безналичному расчету</p>
+                <p class="payments__text">Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета
+                    воспользуйтесь
+                    кнопкой "Пополнить баланс" на главной странице личного кабинета. В разделе "Платежи" можно
+                    распечатать платежное поручение, для этого выберите нужный счет и воспользуйтесь кнопкой
+                    "Печать".</p>
+                <p class="payments__text">Вы можете пополнить баланс на любую сумму. Абонентская плата за наши услуги
+                    списывается
+                    ежедневно равными долями.</p>
             </div>
+        </div>
+        <div class="layout-2-column">
+            <img class="payments__img" src="img/main-about/about.png" alt="section-img">
+            <div class="payments__content">
+                <p class="payments__subtitle">Наши реквизиты</p>
+                @@include('../company/details/_details-data.html')
+            </div>
+        </div>
+        <div class="layout-2-column">
+            <div class="payments__content">
+                <p class="payments__subtitle">Условия оплаты банковскими картами</p>
+                <ol class="payments__ordered-list">
+                    <li>Оплата по пластиковым картам производится совместно с ОАО АСБ "Беларусбанк" и ООО
+                        "Компания электронных платежей "АССИСТ".
+                    </li>
+                    <li>Реквизиты пластиковой карты не вводятся клиентом на нашем сайте. Ввод платежных
+                        данных осуществляется на сайте платежной системы.
+                    </li>
+                    <li>При оплате пластиковой картой клиент переадресовывается на авторизационные страницы
+                        системы Интернет – платежей для последующего ввода реквизитов карты и осуществления
+                        аутентификации держателя карты с использованием:
+                        <ul>
+                            <li>– механизмов Verified By Visa и (или) MasterCard SecureCode – для карточек
+                                платежных систем Visa, MasterCard (при необходимости);
+                            </li>
+                            <li>– технологии Интернет Пароль БЕЛКАРТ – для карточек платежной системы
+                                БЕЛКАРТ, выпущенных ОАО "АСБ Беларусбанк".
+                            </li>
+                        </ul>
+                    </li>
+                    <li>Доступ к авторизационным страницам осуществляется с использованием протокола,
+                        обеспечивающего безопасную передачу данных в Интернете (SSL).
+                    </li>
+                    <li>В случае отказа от использования услуг, при оплате банковской платежной картой,
+                        деньги возвращаются на карту, с которой совершена оплата.
+                    </li>
+                </ol>
+            </div>
+            <img class="payments__img" src="img/payments/Money.png" alt="section-img">
         </div>
     </div>
 </section>
