--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -53,11 +53,11 @@
 
 //for clients
 @import "./components/for-clients/instruction";
-
+@import "./components/for-clients/payments";
 
 @import "./components/advices";
 @import "./components/new-partners";
-@import "./components/payments";
+
 @import "./components/support";
 @import "./components/document";
 @import "./components/visited";
