--- a/datacenter-project/#src/scss/layout/columns.scss
+++ b/datacenter-project/#src/scss/layout/columns.scss
@@ -1,6 +1,9 @@
 .layout-2-column {
   @include columns($width: 48%);
-
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .layout-3-column {
