feat: add document page

--- a/datacenter-project/#src/components/company/contacts/_contacts.html
+++ b/datacenter-project/#src/components/company/contacts/_contacts.html
@@ -6,8 +6,8 @@
                 <h4>Отдел продаж</h4>
                 <div class="contact">
                     Телефоны
-                    <p><span>+375 29 308 6666 (A1)</span></p>
-                    <p><span>+375 33 308 6666 (MTC)</span></p>
+                    <p><span><a href="tel:+375293086666" target="_blank">+375 29 308 6666 (A1)</a></span></p>
+                    <p><span><a href="tel:+375333086666" target="_blank">+375 33 308 6666 (MTC)</a></span></p>
                 </div>
                 <div class="contact">
                     Факс
@@ -23,30 +23,14 @@
                 </div>
                 <div class="contact">
                     Почта
-                    <p><span>sales@datahata.by</span></p>
+                    <p><span><a href="mailto:sales@datahata.by" target="_blank">sales@datahata.by</a></span></p>
                 </div>
                 <div class="contact">
                     Время работы
                     <p><span>с 9:00 до 18:00 | ПН - ПТ</span></p>
                 </div>
                 <h4>Тех.поддержка</h4>
-                <div class="contact">
-                    Телефоны
-                    <p><span>+375 29 309 6666 (A1)</span></p>
-                    <p><span>+375 33 309 6666 (MTC)</span></p>
-                </div>
-                <div class="contact">
-                    Skype
-                    <p><span>datahata.support</span></p>
-                </div>
-                <div class="contact">
-                    Telegram
-                    <p><span>+375 29 309 6666</span></p>
-                </div>
-                <div class="contact">
-                    Почта
-                    <p><span>support@datahata.by</span></p>
-                </div>
+                @@include('_support-contact.html')
             </div>
             <img class="contacts__img" src="img/contacts/Email.png" alt="section-img">
         </div>
