--- a/datacenter-project/#src/components/for-clients/_document.html
+++ b/datacenter-project/#src/components/for-clients/_document.html
@@ -1,61 +1,11 @@
-<section class="document-section section-padding">
-    <div class="container">
-        <h1 class="title-section">Документы</h1>
-        <div class="document-section-container">
-            <h2>ООО "Датахата"</h2>
-            <div class="document-container-item">
-                <a href="/" download="">
-                    <div class="document-container-inner">
-                        <div class="document-container-img">
-                            <img src="img/icons/Vector.svg" alt="icon">
-                        </div>
-                        <div class="document-container-text">Публичный договор возмездного оказания услуг</div>
-                        <div class="document-container-icon">
-                            <img src="img/icons/Сохранить.svg" alt="icon">
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="document-container-item">
-                <a href="/" download="">
-                    <div class="document-container-inner">
-                        <div class="document-container-img">
-                            <img src="img/icons/Vector.svg" alt="icon">
-                        </div>
-                        <div class="document-container-text">Политика конфиденциальности</div>
-                        <div class="document-container-icon">
-                            <img src="img/icons/Сохранить.svg" alt="icon">
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="document-container-item">
-                <a href="/" download="">
-                    <div class="document-container-inner">
-                        <div class="document-container-img">
-                            <img src="img/icons/Vector.svg" alt="icon">
-                        </div>
-                        <div class="document-container-text">Соглашение на пользование услугами</div>
-                        <div class="document-container-icon">
-                            <img src="img/icons/Сохранить.svg" alt="icon">
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="document-container-item">
-                <a href="/" download="">
-                    <div class="document-container-inner">
-                        <div class="document-container-img">
-                            <img src="img/icons/Vector.svg" alt="icon">
-                        </div>
-                        <div class="document-container-text">Публичный договор о предоставлении неисключительной
-                            сублицензии на программное обеспечение</div>
-                        <div class="document-container-icon">
-                            <img src="img/icons/Сохранить.svg" alt="icon">
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
+<section class="document">
+    <div class="container document__container">
+        <h1 class="document__title">Документы</h1>
+        <p class="document__subtitle">ООО "Датахата"</p>
+        <a class="document-block" href="">Публичный договор возмездного оказания услуг</a>
+        <a class="document-block" href="">Политика конфиденциальности</a>
+        <a class="document-block" href="">Соглашение на пользование услугами</a>
+        <a class="document-block" href="">Публичный договор о предоставлении неисключительной
+            сублицензии на программное обеспечение</a>
     </div>
 </section>
