--- a/datacenter-project/#src/components/for-clients/_support.html
+++ b/datacenter-project/#src/components/for-clients/_support.html
@@ -1,68 +1,71 @@
-<section class="support-section section-padding">
+<section class="support">
     <div class="container">
-        <h1 class="title-section">Техническая поддержка</h1>
-        <div class="support-section-container">
-            <div class="support-container-item">
-                <div class="support-container-text">
-                    <p>Служба технической поддержки Датахата готова помочь вам 24 часа в сутки, 7 дней в неделю.</p>
-                    <p>Кроме этого, у нас есть команда инженеров, выполняющих работы по обслуживанию серверов и
-                        IT-инфраструктуры заказчиков на договорной основе.</p>
-                    <p>Написать запрос (тикет) в службу технической поддержки вы можете в нашей биллинговой системе.</p>
-                    <p>Получить консультацию дежурного специалиста можно круглосуточно:</p>
-                </div>
-                <div class="support-container-contact">
-                    <div class="section-contacts-inner">
-                        <div class="contact-inner">
-                            Телефоны
-                            <p><span>+375 29 309 6666 (A1)</span></p>
-                            <p><span>+375 33 309 6666 (MTC)</span></p>
-                        </div>
-                        <div class="contact-inner">
-                            Skype
-                            <p><span>datahata.support</span></p>
-                        </div>
-                        <div class="contact-inner">
-                            Telegram
-                            <p><span>+375 29 309 6666</span></p>
-                        </div>
-                        <div class="contact-inner">
-                            Почта
-                            <p><span>support@datahata.by</span></p>
-                        </div>
-                    </div>
-                </div>
+        <div class="layout-2-column">
+            <div class="support__content">
+                <h1 class="support__title">Техническая поддержка</h1>
+                <p class="payments__text">Служба технической поддержки Датахата готова помочь вам 24 часа в сутки, 7 дней в неделю.</p>
+                <p class="payments__text">Кроме этого, у нас есть команда инженеров, выполняющих работы по обслуживанию серверов и
+                    IT-инфраструктуры заказчиков на договорной основе.</p>
+                <p class="payments__text">Написать запрос (тикет) в службу технической поддержки вы можете в нашей биллинговой системе.</p>
+                <p class="payments__text">Получить консультацию дежурного специалиста можно круглосуточно:</p>
+                @@include('../company/contacts/_support-contact.html')
             </div>
-            <div class="support-container-item" id="order3">
-                <div class="support-img">
-                    <img src="img/contacts/Email.png" alt="section-img">
-                </div>
-            </div>
-            <div class="support-container-item">
-                <div class="support-container-text">
-                    <h2>Перечень того, что мы делаем бесплатно (заявка через тикет):</h2>
-                    <ul>
-                        <li>Консультации по вопросам эксплуатации вашего оборудования в датацентре;</li>
-                        <li>Холодная перезагрузка вашего оборудования по запросу;</li>
-                        <li>Подключение IP-KVM к вашему серверу;</li>
-                        <li>Установка ОС из списка поддерживаемых на арендованный у нас сервер.</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="support-container-item">
-                <div class="support-container-text">
-                    <h2>Если вам нужно:</h2>
-                    <ul>
-                        <li>Администрирование вашего оборудования в дата-центре;</li>
-                        <li>Мониторинг и реагирование на возникшие проблемы 24/7;</li>
-                        <li>Администрирование вашего офисного IT-оборудования и сети;</li>
-                        <li>Нестандартные технологические решения.</li>
-                    </ul>
-                    <p>Мы готовы обсудить с вами условия сотрудничества, напишите нам на <span>sales@datahata.by</span>
-                    </p>
-                    <p>Узнать больше о услугах IT-аутсорсинга вы можете <a href="https://xn--80aikcthwb9g.xn--90ais/">по
-                            ссылке</a></p>
-                </div>
-            </div>
+            <img class="support__img" src="img/contacts/Email.png" alt="section-img">
         </div>
+        <div class="layout-2-column">
+            <div class="support__content">
+                <p class="payments__subtitle">Перечень того, что мы делаем бесплатно <br> (заявка через тикет):</p>
+                <ul class="list">
+                    <li>Консультации по вопросам эксплуатации вашего оборудования в датацентре;</li>
+                    <li>Холодная перезагрузка вашего оборудования по запросу;</li>
+                    <li>Подключение IP-KVM к вашему серверу;</li>
+                    <li>Установка ОС из списка поддерживаемых на арендованный у нас сервер.</li>
+                </ul>
+            </div>
+            <div class="support__content">
+                <p class="payments__subtitle">Если вам нужно:</p>
+                <ul class="list">
+                    <li>Администрирование вашего оборудования в дата-центре;</li>
+                    <li>Мониторинг и реагирование на возникшие проблемы 24/7;</li>
+                    <li>Администрирование вашего офисного IT-оборудования и сети;</li>
+                    <li>Нестандартные технологические решения.</li>
+                </ul>
+                <p class="payments__text">Мы готовы обсудить с вами условия сотрудничества, напишите нам на <a href="mailto:sales@datahata.by">sales@datahata.by</a>
+                </p>
+                <p class="payments__text">Узнать больше о услугах IT-аутсорсинга вы можете <a href="https://xn--80aikcthwb9g.xn--90ais/">по
+                    ссылке</a></p>
+            </div>
+
+        </div>
+
+        <!--        <div class="support-section-container">-->
+        <!--           -->
+        <!--            <div class="support-container-item">-->
+        <!--                <div class="support-container-text">-->
+        <!--                    <h2>Перечень того, что мы делаем бесплатно (заявка через тикет):</h2>-->
+        <!--                    <ul>-->
+        <!--                        <li>Консультации по вопросам эксплуатации вашего оборудования в датацентре;</li>-->
+        <!--                        <li>Холодная перезагрузка вашего оборудования по запросу;</li>-->
+        <!--                        <li>Подключение IP-KVM к вашему серверу;</li>-->
+        <!--                        <li>Установка ОС из списка поддерживаемых на арендованный у нас сервер.</li>-->
+        <!--                    </ul>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--            <div class="support-container-item">-->
+        <!--                <div class="support-container-text">-->
+        <!--                    <h2>Если вам нужно:</h2>-->
+        <!--                    <ul>-->
+        <!--                        <li>Администрирование вашего оборудования в дата-центре;</li>-->
+        <!--                        <li>Мониторинг и реагирование на возникшие проблемы 24/7;</li>-->
+        <!--                        <li>Администрирование вашего офисного IT-оборудования и сети;</li>-->
+        <!--                        <li>Нестандартные технологические решения.</li>-->
+        <!--                    </ul>-->
+        <!--                    <p>Мы готовы обсудить с вами условия сотрудничества, напишите нам на <span>sales@datahata.by</span>-->
+        <!--                    </p>-->
+        <!--                    <p>Узнать больше о услугах IT-аутсорсинга вы можете <a href="https://xn&#45;&#45;80aikcthwb9g.xn&#45;&#45;90ais/">по-->
+        <!--                            ссылке</a></p>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
     </div>
 </section>
