feat: add visited page

--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -56,13 +56,14 @@
 @import "./components/for-clients/payments";
 @import "./components/for-clients/support";
 @import "./components/for-clients/document";
+@import "./components/for-clients/visited";
 
 @import "./components/advices";
 @import "./components/new-partners";
 
 
 
-@import "./components/visited";
+
 @import "./components/article";
 @import "./components/error";
 
