refactor: use layout column class

--- a/datacenter-project/#src/components/base/_contacts-nav__support.html
+++ b/datacenter-project/#src/components/base/_contacts-nav__support.html
@@ -7,8 +7,8 @@
         </div>
         <div class="contacts-nav__info">
             Почта
-            <p><span>support@datahata.by</span></p>
-            <a class="button button_bordered contacts-nav__button" href="mailto:support@datahata.by"><span>Написать письмо</span></a>
+            <p><span>help@datahata.by</span></p>
+            <a class="button button_bordered contacts-nav__button" href="mailto:help@datahata.by"><span>Написать письмо</span></a>
         </div>
     </div>
     <div class="contacts-nav__content">
@@ -30,7 +30,7 @@
         </div>
         <div class="contacts-nav__info">
             Telegram
-            <p><span>+375 29 309 6666</span></p>
+            <p><span><a href="https://t.me/datahata_support_bot" target="_blank">@datahata_support_bot</a></span></p>
         </div>
     </div>
 </div>
