--- a/datacenter-project/#src/components/company/about/_about-datacenter.html
+++ b/datacenter-project/#src/components/company/about/_about-datacenter.html
@@ -1,6 +1,6 @@
-<section class="about-datacenter">
+<section class="about-datacenter section-padding">
     <div class="container">
-        <div class="about-datacenter__content">
+        <div class="about-datacenter__content layout-2-column layout-2-column_reverse">
             <div class="about-datacenter__info">
                 <h3>Электропитание</h3>
                 <div class="about-datacenter__text">
@@ -18,7 +18,7 @@
             </div>
             <img class="about-datacenter__img" id='server-img' src="img/about-us/hosting.png" alt="hosting">
         </div>
-        <div class="about-datacenter__content">
+        <div class="about-datacenter__content layout-2-column">
             <img class="about-datacenter__img" src="img/about-us/web_hosting.png" alt="web_hosting">
             <div class="about-datacenter__info">
                 <h3>Каналы связи</h3>
@@ -35,7 +35,7 @@
                 <a href="https://noc.datahata.by/" class="button button_bordered about-datacenter__button"><span>Информация для сетевых инженеров</span></a>
             </div>
         </div>
-        <div class="about-datacenter__content">
+        <div class="about-datacenter__content layout-2-column layout-2-column_reverse">
             <div class="about-datacenter__info">
                 <h3>Безопасность</h3>
                 <div class="about-datacenter__text">
@@ -54,7 +54,7 @@
             </div>
             <img class="about-datacenter__img" src="img/about-us/security.png" alt="security">
         </div>
-        <div class="about-datacenter__content">
+        <div class="about-datacenter__content layout-2-column">
             <img class="about-datacenter__img" src="img/about-us/Business.png" alt="business">
             <div class="about-datacenter__info">
                 <h3>Обслуживание</h3>
