--- a/datacenter-project/#src/components/company/details/_details.html
+++ b/datacenter-project/#src/components/company/details/_details.html
@@ -1,5 +1,5 @@
-<section class="details">
-    <div class="container details__container">
+<section class="details section-padding">
+    <div class="container layout-2-column">
             <div class="details__content">
                 <h1 class="details__title">Наши реквизиты</h1>
                 @@include('_details-data.html')
