--- a/datacenter-project/#src/components/layout/_footer.html
+++ b/datacenter-project/#src/components/layout/_footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-    <div class="container footer__container">
-            <div class="footer__navigation">
+    <div class="container layout-2-column">
+            <div class="layout-2-column">
                 <div class="footer__content">
                     <h4 class="footer__title">Контакты</h4>
                     <div class="footer__info">
