--- a/datacenter-project/#src/components/main/_advantages.html
+++ b/datacenter-project/#src/components/main/_advantages.html
@@ -1,8 +1,8 @@
-<section class="advantages">
+<section class="advantages section-padding">
     <div class="container">
             <h2 class="advantages__title">Чем мы лучше других?</h2>
-            <div class="advantages__content">
-                <div class="advantage">
+            <div class="layout-3-column">
+                <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
                             <img src="img/advantages/icons/people.svg" alt="people-icon">
@@ -11,7 +11,7 @@
                     <p class="advantage__title">Индивидуальный подход</p>
                     <p class="advantage__text">Для нас Вы - уникальны.</p>
                 </div>
-                <div class="advantage">
+                <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
                             <img src="img/advantages/icons/24.svg" alt="time-icon">
@@ -22,7 +22,7 @@
                         мониторинг работоспособности Вашего оборудования.<br> Наши специалисты сделают всё, что бы
                         Ваши сервисы были доступны 24x7.</p>
                 </div>
-                <div class="advantage">
+                <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
                             <img src="img/advantages/icons/handshake.svg" alt="handshake-icon">
@@ -32,7 +32,7 @@
                     <p class="advantage__text">Наши специалисты отдела продаж и <br>технической службы помогут Вам
                         подобрать оптимальное для Вас решение.</p>
                 </div>
-                <div class="advantage">
+                <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
                             <img src="img/advantages/icons/server.svg" alt="server-icon">
@@ -42,7 +42,7 @@
                     <p class="advantage__text">Мы разместим Ваше оборудование <br> независимо от того, каково его
                         исполнение - стоечное или башенное.</p>
                 </div>
-                <div class="advantage">
+                <div class="advantage__card">
                     <div class="advantage__image">
                         <div class="image__layer">
                             <img src="img/advantages/icons/guard.svg" alt="guard-icon">
@@ -52,7 +52,6 @@
                     <p class="advantage__text">Наш дата-центр находится на закрытой и охраняемой территории, Ваша
                         информация <br> будет храниться так же надежно как в <br>швейцарских банках.</p>
                 </div>
-                <div class="advantage opacity-block"></div>
             </div>
 
     </div>
