--- a/datacenter-project/#src/components/main/_our-services.html
+++ b/datacenter-project/#src/components/main/_our-services.html
@@ -1,8 +1,8 @@
-<section class="all-services">
-    <div class="container all-services__container">
+<section class="our-services section-padding">
+    <div class="container">
         <h2 class="title">Центр обработки данных (data center) "Датахата" предоставляет комплексное обслуживание</h2>
-        <h2 class="all-services__title">Все услуги</h2>
-        <div class="all-services__content">
+        <h2 class="our-services__title">Все услуги</h2>
+        <div class="layout-2-column">
             <div class="service-card">
                 <h3 class="service-card__title">Размещение оборудования</h3>
                 <ul class="service-card__link">
