--- a/datacenter-project/#src/components/main/_review.html
+++ b/datacenter-project/#src/components/main/_review.html
@@ -1,4 +1,4 @@
-<section class="review">
+<section class="review section-padding">
     <div class="container review__container">
         <h2 class="title">Отзывы о нашем дата-центре</h2>
         <div class="review__content">
@@ -67,6 +67,5 @@
             </div>
         </div>
         <a href="review.html" class="button button_bordered review__button"><span>Смотреть ещё отзывы</span></a>
-
     </div>
 </section>
