--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -32,7 +32,7 @@
 
 //main page
 @import "./components/main/promo";
-@import "./components/main/all-services";
+@import "components/main/our-services";
 @import "./components/main/main-about";
 @import "./components/main/advantages";
 @import "./components/partners";
