--- a/datacenter-project/#src/components/company/about/_about-us__cards.html
+++ b/datacenter-project/#src/components/company/about/_about-us__cards.html
@@ -1,4 +1,4 @@
-            <div class="about-us__cards">
+            <div class="about-us__cards layout-3-column">
                 <div class="card">
                     <div class="card__image">
                         <img src="img/about-us/icons/calendar.svg" alt="calendar">
