--- a/datacenter-project/#src/components/company/contacts/_contacts.html
+++ b/datacenter-project/#src/components/company/contacts/_contacts.html
@@ -1,6 +1,6 @@
-<section class="contacts">
+<section class="contacts section-padding">
     <div class="container">
-        <div class="contacts__content">
+        <div class="layout-2-column">
             <h1 class="contacts__title">Наши контакты</h1>
             <div class="contacts__info">
                 <h4>Отдел продаж</h4>
