--- a/datacenter-project/#src/components/main/_about.html
+++ b/datacenter-project/#src/components/main/_about.html
@@ -1,6 +1,6 @@
-<section class="about">
+<section class="about section-padding">
     <div class="container">
-        <div class="about__container">
+        <div class="about__container layout-2-column layout-2-column_reverse">
             <div class="about__content">
                 <h2 class="about__title">О нашем дата-центре</h2>
                 <p class="about__text">ЦОД "Датахата" – является первым коммерческим дата-центром в Республике
