--- a/datacenter-project/#src/components/main/_offer.html
+++ b/datacenter-project/#src/components/main/_offer.html
@@ -1,4 +1,4 @@
-<section class='offer'>
+<section class='offer section-padding'>
     <div class="container offer__container">
             <h2 class="offer__title">Пользуйтесь качественными серверами!</h2>
             <a href="dedicated.html" class="button button_colored offer__button"><span>Перейти к услугам и ценам</span></a>
