--- a/datacenter-project/#src/scss/base/base.scss
+++ b/datacenter-project/#src/scss/base/base.scss
@@ -11,6 +11,8 @@ body {
   height: 100%;
 }
 
+
+
 body.active-body {
   overflow: hidden;
 }
@@ -72,21 +74,14 @@ h4 {
   }
 }
 
-.section-padding {
-  padding-top: 3.857rem;
-  padding-bottom: 11.5rem;
-
+.section-padding{
+ padding: 7rem 0;
   @media (max-width: 420px) {
-    padding-top: 1.429rem;
-    padding-bottom: 5.643rem;
+    padding: 3.5rem 0;
   }
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
+
 
 //Стиль для заголовков секций
 
@@ -95,66 +90,6 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 4rem;
 }
 
-//кнопка с градиентным боредером
-//
-//.gradient-btn {
-//  @extend %gradient-border;
-//}
-//
-//.btn-gr-border {
-//  display: flex;
-//  justify-content: center;
-//  align-items: center;
-//  @extend %gradient-border;
-//  transition: all 0.1s linear;
-//  cursor: pointer;
-//
-//  span {
-//    @extend %gradient-text;
-//    font-size: 1.6rem;
-//    font-weight: 700;
-//
-//    &:hover {
-//      @extend %transparent-bg;
-//      transition: all 0.1s linear;
-//    }
-//  }
-//
-//  &:hover {
-//    @extend %gradient-bg;
-//    transition: all 0.1s linear;
-//  }
-//
-//  &:hover span {
-//    color: $color-light;
-//  }
-//
-//  //&:hover img{
-//  //    color:white;
-//  //}
-//}
-
-//.btn-gr-bg {
-//  display: flex;
-//  justify-content: center;
-//  align-items: center;
-//  border-radius: 16px;
-//  @extend %gradient;
-//  cursor: pointer;
-//
-//  span {
-//    font-size: 2rem;
-//    line-height: 120%;
-//    font-weight: 700;
-//    color: $color-light;
-//  }
-//
-//
-//}
-
-//.block-shadow {
-//  @extend %border-shadow;
-//}
 
 .icon {
   display: inline-block;
