--- a/datacenter-project/#src/scss/components/company/about/about-us.scss
+++ b/datacenter-project/#src/scss/components/company/about/about-us.scss
@@ -1,47 +1,20 @@
-.about-us {
-  padding-top: 6.71rem;
-  padding-bottom: 13.2rem;
-
-  @media (max-width: 420px) {
-    padding-top: 2.5rem;
-    padding-bottom: 4.43rem;
-  }
-}
-
-.about-us__container {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 7rem;
-
-  @media(max-width: 1024px) {
-    flex-direction: column;
-    align-items: center;
-  }
-}
 
 .about-us__title {
-  flex-basis: 100%;
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
+  @media(max-width: 768px) {
+    text-align: center;
+  }
 
 }
 
-.about-us__info {
-  flex-basis: 50%;
-  @media(max-width: 1024px) {
-    order: 3;
-    text-align: justify;
-  }
+.about-us__content{
+  width: 100%;
 }
 
 .about-us__img {
-  flex-basis: 50%;
+  width: 100%;
   max-width: 395px;
   height: auto;
-  margin-top: -60px;
-
-  @media(max-width: 1024px) {
-    margin-top: 0;
-  }
 
   @media(max-width: 768px) {
     max-width: 280px;
