--- a/datacenter-project/#src/scss/components/company/about/about_datacenter.scss
+++ b/datacenter-project/#src/scss/components/company/about/about_datacenter.scss
@@ -1,43 +1,30 @@
-// NEW FLEX SECTION
-
-.about-datacenter {
-  padding-top: 8.14rem;
-  padding-bottom: 2.14rem;
-
-  @media (max-width: 420px) {
-    padding-top: 6.43rem;
-    padding-bottom: 0.36rem;
-  }
-}
 
 .about-datacenter__content {
-  width: 100%;
-  display: flex;
-  column-gap: 15rem;
   margin-bottom: 11.2rem;
 
-  @media (max-width: 1024px) {
-    flex-direction: column;
+  @media (max-width: 768px) {
+    margin-bottom: 6rem;
+  }
+
+  picture{
+    display: flex;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 6.77rem;
   }
 }
 
 .about-datacenter__info {
   margin-top: 7rem;
-  flex-basis: 50%;
 
   h3 {
     margin-bottom: 2rem;
     @media (max-width: 1024px) {
       text-align: center;
-      flex-basis: 100%;
     }
   }
 
 
   @media (max-width: 1024px) {
-    order: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,24 +45,23 @@
 
   }
 }
-#server-img{
-  @media (max-width: 1024px) {
-    max-width: 260px;
-    height: auto;
-  }
 
+
+#server-img{
+  max-width: 280px;
+  width: 100%;
+  height: auto;
   @media (max-width: 768px) {
     max-width: 200px;
-    height: auto;
   }
 }
 
 .about-datacenter__img {
-  @media (max-width: 1024px) {
-    max-width: 260px;
-    height: auto;
+  width: 100%;
+  height: auto;
+  @media (max-width: 768px) {
+    max-width: 300px;
   }
-
 }
 
 .about-datacenter__button {
