--- a/datacenter-project/#src/scss/components/main/main-about.scss
+++ b/datacenter-project/#src/scss/components/main/main-about.scss
@@ -1,28 +1,19 @@
 // ABOUT SECTION
 
 .about {
-    padding: 10.7rem 0 13rem 0;
-
-    @media (max-width: 420px) {
-        padding: 3.57rem 0 5rem 0;
-    }
 
     .about__container {
-        display: flex;
         border-radius: 20px;
         @extend %bg-color-primary;
-        padding: 0 5.35rem 3.43rem;
+        padding: 5.5rem 8rem;
 
-        @media (max-width: 1023px) {
-            flex-direction: column-reverse;
-            align-items: center;
-            padding: 2.64rem 1.43rem;
+        @media (max-width: 420px) {
+            padding: 3.5rem;
         }
 
         @media (max-width: 420px) {
-            padding: 3.7rem 2.1rem;
+            padding: 3.5rem 2rem;
         }
-
     }
 
     .about__image {
@@ -56,7 +47,7 @@
     }
     .about__content {
         padding-top: 6.28rem;
-        flex-basis: 50%;
+
 
         @media (max-width: 420px) {
             padding-top: 2rem;
@@ -67,8 +58,8 @@
             text-align: left;
 
 
-            @media (max-width: 420px) {
-                margin: 0 2rem 1.3rem 0;
+            @media (max-width: 768px) {
+                text-align: center;
             }
         }
 
